fix(homepage): :lipstick: Fix terrible scaling and stretching of the topbar and top section of homepage

--- a/styles/contributions.css
+++ b/styles/contributions.css
@@ -27,12 +27,18 @@ body {
     z-index: 1000;
 }
 
+@media (max-width: 724px) {
+    .topbar {
+        justify-content: center;
+    }
+}
+
 .topbar-button {
     background-color: transparent;
     color: white;
-    padding: 1vh 1vw;
+    padding: 10px;
     text-decoration: none;
-    font-size: 1.5vw;
+    font-size: 20px;
     cursor: pointer;
     transition: all 0.3s, color 0.3s;
 }
